# haasp-advanced-qml-a

./: .spark-initial-sha  CMakeLists.txt  PRD.md  README.md  index.html  package-lock.json  package.json  runtime.config.json
.github/ISSUE_TEMPLATE/: security.yaml
data/: faiss.index  test.db  test.index
engine/: main.cpp
retrieval_service/: faiss_manager.py  main.py  requirements.txt
scripts/: test_vector_search.py
src/: App.tsx  index.css  prd.md
src/assets/documents/: all-my-pc-specs.txt
src/components/: AIAssistant.tsx  AIOrganisms.tsx  AccessibilityOverlay.tsx  BindingInspector.tsx  CanvasArea.tsx  ComponentPalette.tsx  PerformanceMonitor.tsx  Problems.tsx  PropertyPanel.tsx  Timeline.tsx
ui/: main.qml
